// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create_root instruction Works for community side 1`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "DbRShWg7R1efdVuUirTrXC5Vrd2gGtRv7xEXN4QD9ZWw",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "7dz49JkGFr9ywHJJyT7xJkWFJv1HSw6a1oKQMRsjTuci",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "2mMWiiQRJPDL7mxQ6LZdAHjQE98r2xzijhK2xS5gZeb8",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      50,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr",
  },
  {
    "data": [
      33,
      0,
      0,
      98,
      159,
      138,
      196,
      226,
      225,
      130,
      85,
      181,
      197,
      210,
      0,
      94,
      42,
      226,
      18,
      9,
      211,
      194,
      28,
      148,
      198,
      64,
      13,
      111,
      20,
      207,
      236,
      182,
      203,
      148,
      87,
      52,
      60,
      37,
      238,
      142,
      181,
      152,
      189,
      145,
      234,
      134,
      58,
      160,
      34,
      220,
      140,
      215,
      205,
      242,
      14,
      12,
      160,
      93,
      206,
      161,
      76,
      148,
      3,
      228,
      21,
      32,
      14,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BvQys4bSSzv8HnTUse17x6sm67qbQ5u7xj2BiCkQZc4d",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "ETSoAX2JebkucZHW5Vg8JRBRoqptp8vTUMjw3G9fKYSg",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "ALkNx6FUt5DeTXEgmsMtpF6HjBu5v9YA5tHHU1oFB8Mx",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GovErnqK4XvMPN1Njxh1zTQpzzzPZUaJQGjHM9qHjMHr",
  },
]
`;

exports[`create_root instruction Works for community side 2`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "3q1wwWraLNJr86AtDpLvdCv92Xkh47xkruRoDfQheouu",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "FFoZHtEnVAcqWRrWSJuSwaNhDD233ji8AUsUGdTMqf7n",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "814jMngcEVVi5A7qrEVHnaazB4CjZNRmi1oWNYEa9AwK",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      0,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      1,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "CAtStpbXBSmrd3oBwS7ePgMZJ7KK79UVpmM87aGnzpgc",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3",
  },
  {
    "data": [
      33,
      0,
      0,
      211,
      206,
      99,
      226,
      98,
      114,
      48,
      248,
      184,
      62,
      96,
      131,
      254,
      151,
      101,
      116,
      1,
      83,
      61,
      129,
      185,
      172,
      213,
      164,
      100,
      140,
      14,
      75,
      252,
      226,
      69,
      97,
      114,
      30,
      157,
      197,
      96,
      124,
      223,
      6,
      46,
      232,
      4,
      40,
      233,
      165,
      170,
      133,
      193,
      96,
      30,
      142,
      142,
      48,
      178,
      141,
      217,
      103,
      126,
      105,
      18,
      126,
      100,
      5,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HaP8jMNA5tyyZo4WUybWzw2JDm26ks1tM8hzdtFgQ9j4",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "7xi6tNMR7mjVUoT96BAC5RRgGGtsV7ot5PtE5ogCu1yS",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "FRBUNsdJmHmuZ3STCHENKNozW1mUot5kQmvcNg4yaMDd",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "govrnqX1Kx5j1Y3Y3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3Z3",
  },
]
`;

exports[`create_root instruction Works for community side 3`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BWKBz7ea7kSzE6au78sXJnST824wKDPJ9avQZDmoUkWZ",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "2XjVUAVYD6fUnUBoJqLNbQjufdQft4PtxcQwLMkuQrpM",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "F321jXco2GbpLaAsxR727TLbXQ3LQRr7AB9DVN5b5Hy5",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      1,
      100,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      50,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
  },
  {
    "data": [
      33,
      0,
      0,
      22,
      187,
      39,
      222,
      99,
      122,
      51,
      138,
      105,
      6,
      147,
      97,
      251,
      227,
      6,
      101,
      244,
      24,
      179,
      187,
      90,
      230,
      213,
      251,
      188,
      73,
      36,
      72,
      246,
      163,
      245,
      214,
      220,
      129,
      183,
      20,
      201,
      76,
      195,
      18,
      167,
      36,
      98,
      188,
      225,
      204,
      208,
      134,
      127,
      201,
      97,
      156,
      119,
      159,
      173,
      168,
      32,
      103,
      196,
      112,
      211,
      165,
      176,
      37,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
  },
]
`;

exports[`create_root instruction Works for community side 4`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "6Ac4UEJ6AubDFfkK4HsiydsSuvWDgjnGp92C4JiweL1k",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "B4wVHPFEBvhsMxsrEYX2cVbTfcfQiLZMh7XbofeDofhd",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "UoQaWMMFZNnQ9o4qNpBsvFXFQN9HmawwLQL3B5Erd2Y",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      1,
      3,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      90,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      1,
      0,
      1,
      1,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "AiurCiekwEz3i8gVapCdRWs9fb4ry45RHCD691AUp5sd",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
  },
  {
    "data": [
      33,
      0,
      0,
      149,
      151,
      56,
      150,
      173,
      13,
      109,
      19,
      25,
      122,
      75,
      181,
      171,
      5,
      194,
      104,
      230,
      184,
      6,
      229,
      140,
      133,
      155,
      124,
      65,
      57,
      50,
      132,
      177,
      255,
      99,
      28,
      41,
      71,
      70,
      2,
      135,
      89,
      151,
      213,
      90,
      144,
      221,
      206,
      145,
      244,
      228,
      213,
      5,
      175,
      148,
      186,
      70,
      19,
      223,
      178,
      245,
      3,
      231,
      239,
      57,
      163,
      118,
      77,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
  },
]
`;

exports[`create_root instruction Works for council side 1`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "3tnAvuNA5jtTR2x4fDEYwhXrtWjt6o7QB53iENRpFXYU",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "8a92yCQZ8EsgGWJ73GMi9qoMtHEWu46CLcNprzZUAhQB",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      1,
      100,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      50,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "25fzgPBoXMgds3XmZLq1ECVF4HNoBd7RAh9nBoScEdpp",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "2cQL9ecbT5hRw7eVNa7wzmv1C76yebmARSYcivGACD3i",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
  },
  {
    "data": [
      33,
      0,
      0,
      16,
      14,
      25,
      241,
      200,
      60,
      86,
      171,
      177,
      51,
      87,
      236,
      66,
      127,
      133,
      20,
      165,
      135,
      249,
      232,
      86,
      89,
      72,
      208,
      87,
      55,
      211,
      249,
      105,
      251,
      107,
      61,
      201,
      0,
      176,
      70,
      254,
      42,
      131,
      4,
      199,
      78,
      155,
      130,
      51,
      180,
      176,
      158,
      70,
      58,
      2,
      149,
      114,
      88,
      150,
      42,
      185,
      54,
      58,
      242,
      115,
      55,
      107,
      174,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "BgdaaVW8xi3stnmSQxDgbUSrKETHehgKdZnDLf25nqoc",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "Azrzh6gfwi2ixMmDH4Xqo7NBwpgUfcxZdm7Kw1iMxt81",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "GDSEdbzQWVC61j4YhVQZ5pkhQSJ9eg1Gtarj3f3xkga2",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "GrR56FFSgyyMMJtNVsS33nvoM8zXGdHs69QfvZhALv8C",
  },
]
`;

exports[`create_root instruction Works for council side 2`] = `
[
  {
    "data": [
      115,
      195,
      96,
      208,
      249,
      205,
      56,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "DoZw88VQZEe8wM6b9K21LUmTYXTGYx818Awwsu5CaBBF",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "6QjqQDfXuMcEZxxBvReoAgt5ojyFeisshuqN7Fecvba4",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
    ],
    "programId": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
  },
  {
    "data": [
      22,
      1,
      3,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      90,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      1,
      1,
      0,
      1,
      1,
      0,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "EpdNSa67fpomhxXSKaL5fwaCPQGYbWVPf7k6NvpJZnCd",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "GYZp21Xcp7QsxzFCaBLjmaE6UNV239QvZPEPniCvhDJ6",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "Cgkum2oTs87Vhtu87Y8UznPB5tvNSdBweEGQsxYhzeLN",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "3cWyirr8k5NK1ZX8A4ZUpsg1TpHnf2HXvJyBH6BWodHF",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "AEjwvocgFfu2hpGZpY2qGaEzoCQrGYnf7TGSviEZB9Fn",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
  },
  {
    "data": [
      33,
      0,
      0,
      205,
      91,
      89,
      244,
      115,
      149,
      35,
      29,
      249,
      26,
      250,
      42,
      37,
      182,
      233,
      183,
      26,
      230,
      8,
      234,
      215,
      192,
      180,
      222,
      135,
      7,
      96,
      139,
      200,
      87,
      96,
      38,
      101,
      110,
      244,
      147,
      0,
      152,
      4,
      4,
      115,
      244,
      25,
      30,
      255,
      27,
      229,
      200,
      0,
      40,
      6,
      152,
      233,
      89,
      123,
      44,
      73,
      174,
      82,
      37,
      211,
      182,
      211,
      95,
    ],
    "keys": [
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "9a5LFeRuT5mSvFw5pNQFCaXLJb4HE83JBxY9s2BnAiiZ",
      },
      {
        "isSigner": false,
        "isWritable": true,
        "pubkey": "HKcHwT4Vf6qHc5xBNSWcNwJ7iQNMYbUWbGSgv4qDwz98",
      },
      {
        "isSigner": true,
        "isWritable": false,
        "pubkey": "JDt2fQ5TSEn5LBEueZwmpnTUeG3aCebtHDz75paZSw8k",
      },
      {
        "isSigner": true,
        "isWritable": true,
        "pubkey": "11111111111111111111111111111111",
      },
      {
        "isSigner": false,
        "isWritable": false,
        "pubkey": "11111111111111111111111111111111",
      },
    ],
    "programId": "C33AVZsSSswAx6gqi3KXT7bxpXPPi5n1KSFZoan7Zh2m",
  },
]
`;
